--- a/partake-android/app/src/main/res/layout/activity_homepage.xml
+++ b/partake-android/app/src/main/res/layout/activity_homepage.xml
@@ -4,6 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F3E6E6"
+    android:backgroundTint="#E8D3BC95"
     tools:context=".homepage">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="535dp"
+        android:layout_height="791dp"
+        android:alpha="0.2"
+        android:background="#EFE9E9"
+        android:backgroundTint="#00FFFCFC"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.503"
+        app:srcCompat="@drawable/rectangle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
