--- a/partake-android/app/src/main/res/layout/activity_homepage.xml
+++ b/partake-android/app/src/main/res/layout/activity_homepage.xml
@@ -78,19 +78,20 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="415dp"
-        android:layout_height="87dp"
-        android:layout_marginBottom="656dp"
+        android:layout_width="426dp"
+        android:layout_height="95dp"
+        android:layout_marginBottom="675dp"
         android:background="#000000"
         android:backgroundTint="#000000"
         android:fontFamily="@font/comfortaa"
         android:text="Welcome "
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
