--- a/partake-android/app/src/main/res/layout/activity_profile_page.xml
+++ b/partake-android/app/src/main/res/layout/activity_profile_page.xml
@@ -82,8 +82,8 @@
         android:id="@+id/imageView6"
         android:layout_width="246dp"
         android:layout_height="541dp"
-        android:layout_marginBottom="264dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="294dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,8 +135,6 @@
         android:id="@+id/usernametext"
         android:layout_width="284dp"
         android:layout_height="34dp"
-        android:background="#59FFFFFF"
-        android:backgroundTint="#60F3F2F2"
         android:fontFamily="@font/comfortaa"
         android:text="placeholder"
         android:textSize="24sp"
@@ -151,8 +149,6 @@
         android:id="@+id/emailtext"
         android:layout_width="394dp"
         android:layout_height="66dp"
-        android:background="#59FFFFFF"
-        android:backgroundTint="#60F3F2F2"
         android:fontFamily="@font/comfortaa"
         android:text="placeholder"
         android:textAlignment="center"
