--- a/partake-android/app/src/main/res/layout/activity_homepage.xml
+++ b/partake-android/app/src/main/res/layout/activity_homepage.xml
@@ -94,4 +94,69 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="379dp"
+        android:layout_height="130dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp"
+        app:cardMaxElevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.371">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="387dp"
+                android:layout_height="233dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="-19dp"
+                android:layout_marginEnd="-1dp"
+                android:layout_marginBottom="18dp"
+                app:srcCompat="@drawable/addstuffrectangle" />
+
+            <Button
+                android:id="@+id/addstuffbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="285dp"
+                android:background="#00E4E3E3"
+                android:fontFamily="@font/comfortaa"
+                android:onClick="addstuff"
+                android:text="+"
+                android:textColorHighlight="#00FFFFFF"
+                android:textColorLink="#00FFFFFF"
+                android:textSize="60sp"
+                app:rippleColor="#03A9F4" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="23dp"
+                android:fontFamily="@font/comfortaa"
+                android:text="add items to fridge"
+                android:textColor="#FFFEFE"
+                android:textSize="24sp" />
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
